--- a/mobileApp/package.json
+++ b/mobileApp/package.json
@@ -24,6 +24,7 @@
     "react-native": "~0.63.4",
     "react-native-extended-stylesheet": "^0.12.0",
     "react-native-gesture-handler": "~1.8.0",
+    "react-native-material-kit": "^0.6.0-beta.1",
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "~2.15.0",
@@ -32,7 +33,8 @@
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "socket.io-client": "^3.1.0"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
