--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
+    "socket.io": "^3.1.0",
     "util": "^0.12.3"
   }
 }
